adjust ellipse position

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="preloader-container">
         <div class="preloader-text ff_outfit">
-          <span>L</span><span>o</span><span>a</span><span>d</span><span>i</span><span>n</span><span>g</span><span>...</span>
+            <span>L</span><span>o</span><span>a</span><span>d</span><span>i</span><span>n</span><span>g</span><span>...</span>
         </div>
-      </div>
+    </div>
     <header class="min-vh-100 hero_bg bg_dark d-flex flex-column position-relative">
         <div class="light_bg position-absolute z-0"></div>
         <div class="gradient_color"></div>
@@ -105,7 +105,8 @@
                 <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-end">
                     <div class="w_527">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit text-capitalize">Are you sure your
-                            <span class="color_green">data is safe</span>? Neither are we.</h2>
+                            <span class="color_green">data is safe</span>? Neither are we.
+                        </h2>
                         <div class="border_left mt-3">
                             <p class="mb-0 fs_md lh_24 color_white op_80 ps-3 ff_outfit textjustify w_511 fw_400">In
                                 today's digital world, the risk of cyber attacks is constantly increasing. It is no
@@ -136,10 +137,11 @@
                     nisl dolor dui est. </p>
             </div>
             <div class="row pt_40 pb-5 pb_md_113">
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-4 z-2">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
-                            <img src="./assets/images/svg/FeaturesIcons.svg" alt="FeaturesIcons" class="feature_svg">
+                            <img src="./assets/images/svg/FeaturesIcons.svg" alt="FeaturesIcons"
+                                class="feature_svg cursor_p">
                             <h3 class="mb-0 color_white fs_lg lh_33 ff_outfit fw_600 pt_20">Pentesting</h3>
                             <p class="pt-2 mb-0 w_328 fs_md fw_400 ff_outfit color_white lh_24 op_80 text-center">
                                 Cybertise's pentesting enhances digital security with manual 'BlackBox' and 'GreyBox'
@@ -147,10 +149,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0">
+                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0 z-2">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
-                            <img src="./assets/images/svg/FeaturesIcons2.svg" alt="FeaturesIcons" class="feature_svg">
+                            <img src="./assets/images/svg/FeaturesIcons2.svg" alt="FeaturesIcons"
+                                class="feature_svg cursor_p">
                             <h3 class="mb-0 color_white fs_lg lh_33 ff_outfit fw_600 pt_20 text-center">Crowd-Sourced
                                 Pentests</h3>
                             <p class="pt-2 mb-0 w_328 fs_md fw_400 ff_outfit color_white op_80 lh_24 text-center">
@@ -160,10 +163,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-md-0">
+                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-md-0 z-2">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
-                            <img src="./assets/images/svg/FeaturesIcons3.svg" alt="FeaturesIcons" class="feature_svg">
+                            <img src="./assets/images/svg/FeaturesIcons3.svg" alt="FeaturesIcons"
+                                class="feature_svg cursor_p">
                             <h3 class="mb-0 color_white fs_lg lh_33 ff_outfit fw_600 pt_20">VRP</h3>
                             <p class="pt-2 mb-0 w_328 fs_md fw_400 ff_outfit op_80 color_white lh_24 text-center">
                                 Cybertise's VRP (BugBounty) is the ultimate security step, eradicating last
@@ -176,14 +180,14 @@
 
     </section>
     <section class="bg_dark position-relative">
-        <div class="position-absolute EllipseL1 z-0">
+        <div class="position-absolute EllipseL1 z-1 d-none d-md-block">
             <img src="./assets/images/webp/EllipseL1.webp" alt="EllipseL1" class="w-100">
         </div>
-        <div class="position-absolute EllipseL1center z-0">
+        <div class="position-absolute EllipseL1center z-0 d-none d-md-block">
             <img src="./assets/images/webp/EllipseL1center.webp" alt="EllipseL1center" class="w-100">
         </div>
         <div class="container2">
-            <div class="row pt-5 flex-column-reverse flex-md-row pb_80 pb-4">
+            <div class="row pt-sm-5 flex-column-reverse flex-md-row pb_80 pb-4">
                 <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-start z-1">
                     <div class="w_527">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit ">Offensive <span
@@ -210,15 +214,16 @@
         </div>
     </section>
     <section class="bg_dark service_bg position-relative">
-        <div class="EllipseR2 position-absolute z-0">
+        <div class="EllipseR2 position-absolute z-0 d-none d-md-block">
             <img src="./assets/images/webp/EllipseR2.webp" alt="EllipseR2" class="w-100">
         </div>
-        <div class="container2">
-            <div class="row py_100 py-5 align-items-center justify-content-center">
-                <div class="col-12 col-md-6">
+        <div class="container2 z-1">
+            <div class="row py_100 py-5 align-items-center justify-content-center z-1">
+                <div class="col-12 col-md-6 z-1">
                     <img src="./assets/images/webp/frame3.webp" alt="frame3" class="w-100 w_476">
                 </div>
-                <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center flex-column justify-content-center">
+                <div
+                    class="col-12 col-md-6 mt-5 z-1 mt-md-0 d-flex align-items-center flex-column justify-content-center">
                     <div class="d-flex flex-column w_548">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit">Further <span class="color_green">
                                 Services</span></h2>
@@ -249,7 +254,7 @@
         </div>
     </section>
     <section class="bg_dark position-relative">
-        <div class="position-absolute EllipseL2 z-0">
+        <div class="position-absolute EllipseL2 z-1 d-none d-md-block">
             <img src="./assets/images/webp/EllipseL2.webp" alt="EllipseL2" class="w-100 z-0">
         </div>
         <div class="container2 pb_171 z-1">
@@ -260,15 +265,18 @@
             <img src="./assets/images/webp/globe.webp" alt="globe" class="w-100">
         </div>
     </section>
-    <section class="bg_dark">
-        <div class="container2 pb_140">
-            <div class="lastbox d-flex flex-column align-items-center">
-                <h2 class="mb-0 fs_xl fw_400 lh_57 text-center color_white ff_outfit text-capitalize">Get into <span
+    <section class="bg_dark position-relative">
+        <div class="position-absolute last_right d-none d-md-block z-0">
+            <img src="./assets/images/webp/last_right.png" alt="last_right" class="w-100 z-0">
+        </div>
+        <div class="container2 pb_140 z-2">
+            <div class="lastbox d-flex flex-column align-items-center z-2">
+                <h2 class="mb-0 fs_xl fw_400 lh_57 text-center color_white ff_outfit text-capitalize z-2">Get into <span
                         class="color_green">touch</span></h2>
-                <p class="mb-0 mt_10 color_white fs_md lh_24 fw_400 ff_outfit text-center w_628 pb_32">Defend your
+                <p class="mb-0 mt_10 color_white fs_md lh_24 fw_400 ff_outfit text-center w_628 pb_32 z-2">Defend your
                     business against online threats while leveraging our IT security expertise and experience for
                     comprehensive protection and peace of mind.</p>
-                <div class="d-flex flex-column gap-3 w-100 align-items-center">
+                <div class="d-flex flex-column gap-3 w-100 align-items-center z-2">
                     <form action="" class="formdiv d-flex align-items-center justify-content-between w-100">
                         <input type="email" placeholder="Enter your email address" style="border: none; outline: none;"
                             class="bg-transparent w-100 color_white fs_md lh_24 fw_400 ff_outfit">
