--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="preloader-container">
+    <div class="preloader-container overflow-hidden">
         <div class="preloader-text ff_outfit">
             <span>L</span><span>o</span><span>a</span><span>d</span><span>i</span><span>n</span><span>g</span><span>...</span>
         </div>
@@ -47,7 +47,7 @@
                                     <img src="./assets/images/svg/flag2.svg" alt="flag2">
                                 </a></li>
                         </ul>
-                        <div class="menuicon d-flex d-lg-none flex-column gap-2 justify-content-center">
+                        <div class="menuicon d-flex d-md-none flex-column gap-2 justify-content-center">
                             <span class="bar"></span>
                             <span class="bar"></span>
                             <span class="bar"></span>
@@ -277,8 +277,8 @@
                     business against online threats while leveraging our IT security expertise and experience for
                     comprehensive protection and peace of mind.</p>
                 <div class="d-flex flex-column gap-3 w-100 align-items-center z-2">
-                    <form action="" class="formdiv d-flex align-items-center justify-content-between w-100">
-                        <input type="email" placeholder="Enter your email address" style="border: none; outline: none;"
+                    <form action="action_page.php" class="formdiv d-flex align-items-center justify-content-between w-100">
+                        <input type="email" id="empyt" placeholder="Enter your email address" style="border: none; outline: none;"
                             class="bg-transparent w-100 color_white fs_md lh_24 fw_400 ff_outfit">
                         <button
                             class="bg_green d-none d-sm-block color_black fs_md fw_500 ff_outfit lh_24 home_btn text-nowrap">Sign
