--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <div class="d-flex flex-column gap_25">
                         <h5 class="mb-0 color_white ff_outfit fs_md fw_500 lh_24">Information</h5>
                         <ul class="d-flex flex-column ps-0 mb-0 gap_15">
-                            <li><a href=""
+                            <li><a href="https://www.google.com/maps/@29.2904069,76.0389249,8z?entry=ttu" target="_blank"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 d-flex align-items-center gap_10">
                                     <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -364,7 +364,7 @@
                                     </svg>
                                     <span class="hover_line position-relative d-inline-block">Privacy Policy</span></a>
                             </li>
-                            <li><a href=""
+                            <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 d-flex align-items-center gap_10">
                                     <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -388,7 +388,7 @@
                     <p class="color_white mt_10 fs_md fw_500 mb_12 lh_24 ff_outfit">Follow us </p>
 
                     <ul class="ps-0 mb-0 d-flex gap_10">
-                        <li><a href="" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://www.facebook.com/" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="11" height="17" viewBox="0 0 11 17" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -396,7 +396,7 @@
                                         fill="white" />
                                 </svg>
                             </a></li>
-                        <li><a href="" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://www.instagram.com/" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -409,7 +409,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                             </a></li>
-                        <li><a href="" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://twitter.com/i/flow/login" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="17" height="15" viewBox="0 0 17 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -417,7 +417,7 @@
                                         fill="white" />
                                 </svg>
                             </a></li>
-                        <li><a href="" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://in.linkedin.com/" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_0_1094)">
