--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                         <defs>
                                             <linearGradient id="paint0_linear_0_1067" x1="1.189" y1="-9.11997e-06"
                                                 x2="35.4005" y2="4.77811" gradientUnits="userSpaceOnUse">
-                                                <stop stop-color="#BAFF00" />
+                                                <stop stop-color="#BAFF00" offset="1" />
                                                 <stop offset="1" stop-color="#00B2FE" />
                                             </linearGradient>
                                         </defs>
@@ -376,7 +376,7 @@
                                         <defs>
                                             <linearGradient id="paint0_linear_0_1076" x1="1.189" y1="-9.11997e-06"
                                                 x2="35.4005" y2="4.77811" gradientUnits="userSpaceOnUse">
-                                                <stop stop-color="#BAFF00" />
+                                                <stop stop-color="#BAFF00" offset="1" />
                                                 <stop offset="1" stop-color="#00B2FE" />
                                             </linearGradient>
                                         </defs>
