adjust text width

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                     <img src="./assets/images/svg/logo.svg" alt="logo" class="cursor_p logo_img">
                     <div class="d-flex align-items-center gap_40 gap-3">
                         <ul class="ps-0 mb-0 d-flex align-items-center gap_32 menulist">
-                            <li><a href=""
+                            <li><a href="#"
                                     class="nav_links fs_md lh_24 fw_400 color_white op_80 hover_line position-relative ff_outfit d-inline-block">Home</a>
                             </li>
-                            <li><a href=""
+                            <li><a href="#About"
                                     class="nav_links fs_md lh_24 fw_400 color_white op_80 hover_line position-relative ff_outfit d-inline-block">About</a>
                             </li>
-                            <li><a href=""
+                            <li><a href="#Product"
                                     class="nav_links fs_md lh_24 fw_400 color_white op_80 hover_line position-relative ff_outfit d-inline-block">Product</a>
                             </li>
-                            <li><a href=""
+                            <li><a href="#Contact"
                                     class="nav_links fs_md lh_24 fw_400 color_white op_80 hover_line position-relative ff_outfit d-inline-block">Contact</a>
                             </li>
                         </ul>
@@ -74,21 +74,21 @@
                         <img src="./assets/images/webp/Ellipse839.webp" alt="Ellipse839" class="w-100">
                     </div>
                     <div class="row w-100">
-                        <div class="col-12 col-sm-4 mt-4 mt-sm-0 d-flex flex-column align-items-center">
+                        <div class="col-12 z-2 col-sm-4 mt-4 mt-sm-0 d-flex flex-column align-items-center">
                             <div class="d-flex flex-column align-items-center">
                                 <h3 class="mb-0 color_green fw_500 lh_52 fs_xl ff_outfit text-center">1K+</h3>
                                 <p class="mb-0 fs_md ff_outfit lh_26 fw_400 text-center color_white pt-3">Partners
                                     Globally</p>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-4 mt-4 mt-sm-0 d-flex flex-column align-items-center">
+                        <div class="col-12 z-2 col-sm-4 mt-4 mt-sm-0 d-flex flex-column align-items-center">
                             <div class="d-flex flex-column align-items-center">
                                 <h3 class="mb-0 color_green fw_500 lh_52 fs_xl ff_outfit text-center">120+</h3>
                                 <p class="mb-0 fs_md ff_outfit lh_26 fw_400 text-center color_white pt-3">Countries
                                     Served</p>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-4 mt-4 mt-sm-0 mb-4 mb-sm-0 d-flex flex-column align-items-center">
+                        <div class="col-12 z-2 col-sm-4 mt-4 mt-sm-0 mb-4 mb-sm-0 d-flex flex-column align-items-center">
                             <div class="d-flex flex-column align-items-center">
                                 <h3 class="mb-0 color_green fw_500 lh_52 fs_xl ff_outfit text-center">350K+</h3>
                                 <p class="mb-0 fs_md ff_outfit lh_26 fw_400 text-center color_white pt-3">Users
@@ -108,12 +108,12 @@
                             <span class="color_green">data is safe</span>? Neither are we.
                         </h2>
                         <div class="border_left mt-3">
-                            <p class="mb-0 fs_md lh_24 color_white op_80 ps-3 ff_outfit textjustify w_511 fw_400">In
+                            <p class="mb-0 fs_md lh_24 color_white op_80 ps-3 ff_outfit textjustify w_522 fw_400">In
                                 today's digital world, the risk of cyber attacks is constantly increasing. It is no
                                 longer the hackers themselves who exploit security gaps in systems to enrich themselves
                                 on a smaller scale. In the meantime, it is more about criminal structures that acquire
                                 weak points on the hacker black market in order to later extort large ransom sums.</p>
-                            <p class="mb-0 fs_md lh_24 color_white op_80 ps-3 ff_outfit pt_10 textjustify w_511 fw_400">
+                            <p class="mb-0 fs_md lh_24 color_white op_80 ps-3 ff_outfit pt_10 textjustify w_522 fw_400">
                                 Statistics from the German Federal Office for Information Security (BSI) show that the
                                 number of vulnerabilities in commercial software has increased significantly compared to
                                 the previous year. In addition, there is a large number of unreported vulnerabilities
@@ -125,7 +125,7 @@
             </div>
         </div>
     </section>
-    <section class="section3 position-relative bg_dark">
+    <section class="section3 position-relative bg_dark" id="About">
         <div class="sec3_gradup position-absolute w-100 z-0"></div>
         <div class="sec3_graddown position-absolute z-0"></div>
         <div class="container2 pt_md_110 pt-5 z-1">
@@ -136,8 +136,8 @@
                     facilisi facilisis diam mi dis. Et gravida porta quam risus consectetur est imperdiet. Enim feugiat
                     nisl dolor dui est. </p>
             </div>
-            <div class="row pt_40 pb-5 pb_md_113">
-                <div class="col-12 col-sm-6 col-md-4 z-2">
+            <div class="row pt_40 pb-5 pb_md_113 justify-content-center">
+                <div class="col-12 col-sm-6 col-md-4 z-2 d-flex justify-content-center">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
                             <img src="./assets/images/svg/FeaturesIcons.svg" alt="FeaturesIcons"
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0 z-2">
+                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0 z-2 d-flex justify-content-center">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
                             <img src="./assets/images/svg/FeaturesIcons2.svg" alt="FeaturesIcons"
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-md-0 z-2">
+                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-md-0 z-2 d-flex justify-content-center">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
                             <img src="./assets/images/svg/FeaturesIcons3.svg" alt="FeaturesIcons"
@@ -183,12 +183,12 @@
         <div class="position-absolute EllipseL1 z-1 d-none d-md-block">
             <img src="./assets/images/webp/EllipseL1.webp" alt="EllipseL1" class="w-100">
         </div>
-        <div class="position-absolute EllipseL1center z-0 d-none d-md-block">
+        <div class="position-absolute EllipseL1center z-1 d-none d-md-block">
             <img src="./assets/images/webp/EllipseL1center.webp" alt="EllipseL1center" class="w-100">
         </div>
         <div class="container2">
             <div class="row pt-sm-5 flex-column-reverse flex-md-row pb_80 pb-4">
-                <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-start z-1">
+                <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-start z-2">
                     <div class="w_527">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit ">Offensive <span
                                 class="color_green">Security Experts</span></h2>
@@ -207,13 +207,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 z-2">
                     <img src="./assets/images/webp/Frame2.webp" alt="frame2" class="w-100">
                 </div>
             </div>
         </div>
     </section>
-    <section class="bg_dark service_bg position-relative">
+    <section class="bg_dark service_bg position-relative" id="Product">
         <div class="EllipseR2 position-absolute z-0 d-none d-md-block">
             <img src="./assets/images/webp/EllipseR2.webp" alt="EllipseR2" class="w-100">
         </div>
@@ -224,7 +224,7 @@
                 </div>
                 <div
                     class="col-12 col-md-6 mt-5 z-1 mt-md-0 d-flex align-items-center flex-column justify-content-center">
-                    <div class="d-flex flex-column w_548">
+                    <div class="d-flex flex-column w_517">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit">Further <span class="color_green">
                                 Services</span></h2>
                         <p class="mb-0 pt_10 fs_md color_white op_80 lh_24 fw_400 ff_outfit">Neben den oben genannten
@@ -265,7 +265,7 @@
             <img src="./assets/images/webp/globe.webp" alt="globe" class="w-100">
         </div>
     </section>
-    <section class="bg_dark position-relative">
+    <section class="bg_dark position-relative" id="Contact">
         <div class="position-absolute last_right d-none d-md-block z-0">
             <img src="./assets/images/webp/last_right.png" alt="last_right" class="w-100 z-0">
         </div>
@@ -279,7 +279,7 @@
                 <div class="d-flex flex-column gap-3 w-100 align-items-center z-2">
                     <form action="action_page.php" class="formdiv d-flex align-items-center justify-content-between w-100">
                         <input type="email" id="empyt" placeholder="Enter your email address" style="border: none; outline: none;"
-                            class="bg-transparent w-100 color_white fs_md lh_24 fw_400 ff_outfit">
+                            class="bg-transparent w-100 color_white fs_md pe-2 lh_24 fw_400 ff_outfit">
                         <button
                             class="bg_green d-none d-sm-block color_black fs_md fw_500 ff_outfit lh_24 home_btn text-nowrap">Sign
                             up</button>
@@ -304,16 +304,16 @@
                     <div class="d-flex flex-column gap_18">
                         <h5 class="mb-0 color_white ff_outfit fs_md fw_500 lh_24">Quick links</h5>
                         <ul class="d-flex flex-column ps-0 mb-0 gap_10">
-                            <li><a href=""
+                            <li><a href="#"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 hover_line position-relative d-inline-block">Home</a>
                             </li>
-                            <li><a href=""
+                            <li><a href="#"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 hover_line position-relative d-inline-block">About</a>
                             </li>
-                            <li><a href=""
+                            <li><a href="#"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 hover_line position-relative d-inline-block">Product</a>
                             </li>
-                            <li><a href=""
+                            <li><a href="#"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 hover_line position-relative d-inline-block">Contact</a>
                             </li>
                         </ul>
@@ -323,10 +323,10 @@
                     <div class="d-flex flex-column gap_18">
                         <h5 class="mb-0 color_white ff_outfit fs_md fw_500 lh_24">Links</h5>
                         <ul class="d-flex flex-column ps-0 mb-0 gap_10">
-                            <li><a href=""
+                            <li><a href="#"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 hover_line position-relative d-inline-block">Privacy
                                     Policy</a></li>
-                            <li><a href=""
+                            <li><a href="#"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 hover_line position-relative d-inline-block">Terms
                                     of Service</a></li>
                         </ul>
@@ -362,7 +362,7 @@
                                             </linearGradient>
                                         </defs>
                                     </svg>
-                                    <span class="hover_line position-relative d-inline-block">Privacy Policy</span></a>
+                                    <span class="hover_line position-relative d-inline-block">@Cybertise.com</span></a>
                             </li>
                             <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 d-flex align-items-center gap_10">
@@ -381,8 +381,7 @@
                                             </linearGradient>
                                         </defs>
                                     </svg>
-                                    <span class="hover_line position-relative d-inline-block">Terms of
-                                        Service</span></a></li>
+                                    <span class="hover_line position-relative d-inline-block">+123 456 7890</span></a></li>
                         </ul>
                     </div>
                     <p class="color_white mt_10 fs_md fw_500 mb_12 lh_24 ff_outfit">Follow us </p>
